attempt at fixing weird whitespace

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,7 @@
 a.login-logout-link:hover {
   color: #4d79e7;
 }
+
+button.react-scroll-to-bottom--css-ladhj-1tj0vk3 {
+  visibility: hidden;
+}
